@@ -27,6 +27,10 @@
       
       \item The HTML version of \sQuote{An Introduction to R} now has
       links to PNG versions of the figures.
+
+      \item There is some support to produce manuals in ebook
+      formats. (See \file{doc/manual/Makefile}.  Suggested by Mauro
+      Cavalcanti.)
     }
   }
   
